--- a/index.html
+++ b/index.html
@@ -184,7 +184,7 @@
         </div>
         <div class="col-lg-7 col-xl-6 col-sm-12">
           <div class="position-relative image-center">
-            <img src="./image/Group 6.png" alt="" height="500px">
+            <img src="./image/Group 6.png" alt="" width=100%>
           </div>
         </div>
       </div>
