--- a/index.html
+++ b/index.html
@@ -262,16 +262,19 @@
         <nav class="navbar navbar-expand-lg navbar-light bg-light">
           <ul class="nav justify-content-center nav-pills">
             <li class="nav-item px-4">
-              <a class="nav-link active" href="#">Menu 1</a>
+              <a class="nav-link active" href="#">Web Design</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="#">Menu 2</a>
+              <a class="nav-link" href="#">Development</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="#">Menu 3</a>
+              <a class="nav-link" href="#">Graphic Design</a>
             </li>
             <li class="nav-item px-4">
-              <a class="nav-link" href="#">Menu 4</a>
+              <a class="nav-link" href="#">Marketing</a>
+            </li>
+            <li class="nav-item px-4">
+              <a class="nav-link" href="#">Finance</a>
             </li>
           </ul>
     </div>
