--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 
   <!-- Header -->
   <header class="navbar-light navbar--sticky header-static">
-    <nav class="d-flex nav navbar navbar-expand-lg navbar-light fixed-top bg-light justify-content-between">
+    <nav class="d-flex nav navbar navbar-expand-xl navbar-light fixed-top bg-light justify-content-between">
       <div class="container-fluid">
         <a class="navbar-brand" href="#">
           <img src="./image/logo.svg" height="30" alt="Logo">
@@ -29,10 +29,10 @@
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
           aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
-      </button>
+        </button>
 
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
-          <ul class="navbar-nav navbar-nav-scroll me-auto">
+          <ul class="navbar-nav navbar-nav-scroll me-auto Pad">
             <!-- Nav item 1 Demos -->
             <li class="nav-item dropdown">
               <a class="nav-link dropdown-toggle active" href="#">Demos</a>
@@ -137,7 +137,9 @@
             <div class="nav-item w-100">
               <form class="position-relative">
                 <input class="form-control pe-5 bg-transparent" type="search" placeholder="Search" aria-label="Search">
-                <button class="bg-transparent p-2 position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset" type="submit">
+                <button
+                  class="bg-transparent p-2 position-absolute top-50 end-0 translate-middle-y border-0 text-primary-hover text-reset"
+                  type="submit">
                   <i class="fas fa-search fs-6 "></i>
                 </button>
               </form>
@@ -157,6 +159,7 @@
     </nav>
   </header>
   <!-- Content Div -->
+
   <div class="container">
     <!-- Banner Div -->
     <div class="banner  d-flex">
@@ -184,7 +187,7 @@
         </div>
         <div class="col-lg-7 col-xl-6 col-sm-12">
           <div class="position-relative image-center">
-            <img src="./image/Group 6.png" alt="" width=100%>
+            <img src="./image/Group 6.png" alt="" width="100%">
           </div>
         </div>
       </div>
